# metal1

./: .gitmodules  .project  CHANGELOG.rst  LOCATION.md  README.md  mimo.sh
AutoDocking/: README.md  prominipng
AutoDocking/Eric-IR-Lib/: IRremote.cpp  IRremote.h  IRremoteInt.h  README.md  RecvList.cpp  RecvList.h  irPronto.cpp  irRecv.cpp  irSend.cpp  ir_Aiwa.cpp  ir_Denon.cpp  ir_Dish.cpp  ir_JVC.cpp  ir_LG.cpp  ir_Mitsubishi.cpp  ir_NEC.cpp  ir_Panasonic.cpp  ir_RC5_RC6.cpp  ir_Samsung.cpp  ir_Sanyo.cpp  ir_Sharp.cpp  ir_Sony.cpp  ir_Template.cpp  ir_Whynter.cpp
AutoDocking/IRemitter/: IRemitter.ino
andbot/: CHANGELOG.rst  CMakeLists.txt  LOCATION.md  README.md  package.xml
andbot.old/: CMakeLists.txt
andbot.old/launch/: amcl.launch  andbot_arm_test.launch  andbot_ekf.launch  andbot_odom_test.launch  fake_move_base_blank_map.launch  fake_move_base_ekf.launch  fake_move_base_real_map.launch  gmapping.launch  metal_ekf.launch  robot_mapping.launch  serial_node_debug.launch  xv_11.launch
andbot.old/msg/: JointCmd.msg  JointFb.msg  JointOffset.msg  Offset.msg
andbot.old/src/: acc_lim_test.cpp  action.cpp  mybot_base_controller.cpp  mybot_laser_obstacle_clearing_filter.cpp  mybot_stop_when_goal_reached.cpp  teleop_home.cpp
andbot.old/srv/: DeviceCheck.srv  DriverState.srv
andbot/bag/: banana.bag
andbot/launch/: .display.launch.swp  .test.launch.swp  35_5F_gmapping.launch  578.launch  580.launch  580_sonar.launch  amcl.launch  amcl_578.launch  amcl_580.launch  amcl_andbot1.launch  amcl_andbot2.launch  amcl_lab.launch  andbot.launch  andbot1.launch  andbot2.launch  andbot2_gmapping.launch  andbot_ekf.launch  andbot_ekf_dwa.launch  andbot_ekf_dwa_amcl.launch  andbot_ekf_dwa_amcl_followme.launch  andbot_sonar.launch  andbot_v1.launch  andbot_v1_ekf_dwa_amcl.launch  arm.launch  arm_test.launch  base_only.launch  depthimage_to_laserscan.launch  display.launch  display_metal.launch  display_sonar.launch  dwa_move_base_ekf.launch  dwa_move_base_ekf_sonar.launch  fake_amcl.launch  fake_move_base.launch  fake_move_base_map_with_obstacles.launch  fake_move_base_odom_test.launch  fake_move_base_sonar.launch  gmapping.launch  gmapping_ekf.launch  hector.launch  (+9 more)
andbot/map/: 578.yaml  578_AR.pgm  578_AR.yaml  578_AR_mod.pgm  580.pgm  580.yaml  AR.pgm  AR.yaml  banana.yaml  lab_test.pgm  lab_test.yaml  lab_test_mod.pgm  lib.pgm  lib.yaml  lib2.pgm  lib2.yaml  lib2_mod.pgm  min.pgm  min2.pgm  razor_map.pgm  razor_map.yaml  razor_map_done.pgm  razor_map_done2.pgm  razor_map_done3.pgm
andbot/msg/: Battery.msg  Bump.msg  Fb.msg  HeadCmd.msg  Sonar.msg  WheelCmd.msg  WheelFb.msg
andbot/src/: .mimo_base_controller.cpp.swn  .mimo_base_controller.cpp.swo  .mimo_base_controller.cpp.swp  app_sub.cpp  compliance_control.cpp  left_arm_moveR.cpp  mimo_base_controller.cpp  mimo_base_controller.cpp.ori  mybot_base_controller_v1.cpp  mybot_laser_angular_bound_filter.cpp  mybot_odom_ekf.cpp  mybot_odom_ekf_v1.cpp  mybot_odom_fusion.cpp  mybot_odometry.cpp  mybot_odometry_v1.cpp  mybot_rplidar_laser_angular_bound_filter.cpp  mybot_xv11_angular_bound_filter.cpp  right_arm_moveR.cpp  robot_pose_publisher.cpp  sonar.cpp  startup_service.py  teleop_rugby.cpp
andbot/srv/: Calibrate.srv  Startup.srv
andbot1dot2/: CMakeLists.txt  package.xml
andbot1dot2/config/: global_costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_common_params.yaml  local_costmap_params.yaml  local_costmap_params_ekf.yaml
andbot1dot2/launch/: andbot1dot2_mvb_dwa_amcl.launch.xml  andbot1dot2_standalone.launch  andbot1dot2_standalone_ekf.launch  andbot1dot2_standalone_ekf_MIMO.launch  dwa_amcl.launch  dwa_amcl_ekf.launch  dwa_gmapping.launch  dwa_gmapping_ekf.launch  robot_pose_ekf.launch  rplidar.launch
andbot1dot2/map/: AROffice_andbot1dot2.pgm  AROffice_andbot1dot2.yaml  AROffice_andbot1dot2_ekf.pgm  AROffice_andbot1dot2_ekf.yaml
andbot1dot2/scripts/: andbot1dot2_teleop_key
andbot1dot2/src/: DriverState_client.cpp  DriverState_server.cpp  mybot_base_controller_MIMO_andbot1dot2.cpp  mybot_base_controller_MIMO_andbot1dot2_new.cpp  mybot_base_controller_closedloop_andbot1dot2.cpp  mybot_base_controller_v1_andbot1dot2.cpp  mybot_laser_angular_bound_filter_andbot1dot2.cpp  mybot_odom_ekf_andbot1dot2.cpp  mybot_odom_v1_andbot1dot2.cpp
andbot1dot2/srv/: DriverState.srv
andbot_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
andbot_teleop/launch/: xbox360_teleop.launch  xbox360_teleop_andbot.launch
andbot_teleop/param/: mux.yaml
andbot_teleop/scripts/: andbot_teleop_key
andbot_teleop/src/: andbot_joy.cpp
andbot_test_joint/: CMakeLists.txt  package.xml
andbot_test_joint/src/: left_arm_moveR.cpp  right_arm_moveR.cpp  sin_wave_l0.cpp  sin_wave_neck.cpp  sub_test.cpp  sub_test.cpp.c  teleop_home.cpp
angelbot/: CMakeLists.txt  package.xml
angelbot/config/: global_costmap_common_params.yaml  local_costmap_common_params.yaml  nav_obstacles_params.yaml
angelbot/launch/: amcl.launch  angelbot_functionaltest.launch  angelbot_mvb_dwa_amcl_ekf.launch  angelbot_mvb_dwa_gmapping_ekf.launch  angelbot_standalone.launch  angelbot_standalone_ekf.launch  dwa_amcl.launch  dwa_amcl_ekf.launch  gmapping.launch  (+6 more)
angelbot_sim/: CMakeLists.txt  angelbot.rviz  package.xml
custom_msg_pkg/: CMakeLists.txt  package.xml
fir_noisefilter/: CMakeLists.txt  README.md  package.xml
hyperlync_simulator_2/: Readme.md
hyperlync_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
hyperlync_teleop/launch/: xbox360_teleop.launch  xbox360_teleop_andbot.launch
hyperlync_teleop/launch/includes/: velocity_smoother.launch.xml
hyperlync_teleop/scripts/: hyperlync_teleop_key
hyperlync_teleop/src/: hyperlync_joy.cpp  hyperlync_teleop_key1.cpp
mcu_control/: CHANGELOG.rst  README.md
mybot_followme/: CMakeLists.txt  DEADJOE  README.md  package.xml
position_listener/: CMakeLists.txt  package.xml
razor_imu_9dof/: README.md
robot_pose_ekf/: robot_pose_ekf.launch
rugby/: CMakeLists.txt  package.xml
rviz_teleop_commander/: CMakeLists.txt  package.xml
xv_11_laser_driver/: README.md
(+350 files in other folders)
